--- a/dists/residual.desktop
+++ b/dists/residual.desktop
@@ -5,5 +5,5 @@ Exec=residual
 Icon=residual.xpm
 Terminal=false
 Type=Application
-Categories=Application;Game;AdventureGame;
+Categories=Game;AdventureGame;
 StartupNotify=false
