Updated the MSVC project files for commit #35470
svn-id: r35471

--- a/dists/msvc7/scummvm.vcproj
+++ b/dists/msvc7/scummvm.vcproj
@@ -941,18 +941,6 @@
 				RelativePath="..\..\graphics\cursorman.h">
 			</File>
 			<File
-				RelativePath="..\..\graphics\dxa_player.cpp">
-			</File>
-			<File
-				RelativePath="..\..\graphics\dxa_player.h">
-			</File>
-			<File
-				RelativePath="..\..\graphics\flic_player.cpp">
-			</File>
-			<File
-				RelativePath="..\..\graphics\flic_player.h">
-			</File>
-			<File
 				RelativePath="..\..\graphics\font.cpp">
 			</File>
 			<File
@@ -983,12 +971,6 @@
 				RelativePath="..\..\graphics\imageman.h">
 			</File>
 			<File
-				RelativePath="..\..\graphics\mpeg_player.cpp">
-			</File>
-			<File
-				RelativePath="..\..\graphics\mpeg_player.h">
-			</File>
-			<File
 				RelativePath="..\..\graphics\primitives.cpp">
 			</File>
 			<File
@@ -999,12 +981,6 @@
 			</File>
 			<File
 				RelativePath="..\..\graphics\scaler.h">
-			</File>
-			<File
-				RelativePath="..\..\graphics\smk_player.cpp">
-			</File>
-			<File
-				RelativePath="..\..\graphics\smk_player.h">
 			</File>
 			<File
 				RelativePath="..\..\graphics\surface.cpp">
@@ -1122,6 +1098,33 @@
 				</File>
 				<File
 					RelativePath="..\..\graphics\fonts\scummfont.cpp">
+				</File>
+			</Filter>
+			<Filter
+				Name="video">
+				<File
+					RelativePath="..\..\graphics\video\dxa_player.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\dxa_player.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\flic_player.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\flic_player.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\mpeg_player.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\mpeg_player.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\smk_player.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\smk_player.h">
 				</File>
 			</Filter>
 		</Filter>
