--- a/dists/msvc71/scummvm.vcproj
+++ b/dists/msvc71/scummvm.vcproj
@@ -955,18 +955,6 @@
 				RelativePath="..\..\graphics\cursorman.h">
 			</File>
 			<File
-				RelativePath="..\..\graphics\dxa_player.cpp">
-			</File>
-			<File
-				RelativePath="..\..\graphics\dxa_player.h">
-			</File>
-			<File
-				RelativePath="..\..\graphics\flic_player.cpp">
-			</File>
-			<File
-				RelativePath="..\..\graphics\flic_player.h">
-			</File>
-			<File
 				RelativePath="..\..\graphics\font.cpp">
 			</File>
 			<File
@@ -997,12 +985,6 @@
 				RelativePath="..\..\graphics\imageman.h">
 			</File>
 			<File
-				RelativePath="..\..\graphics\mpeg_player.cpp">
-			</File>
-			<File
-				RelativePath="..\..\graphics\mpeg_player.h">
-			</File>
-			<File
 				RelativePath="..\..\graphics\primitives.cpp">
 			</File>
 			<File
@@ -1013,12 +995,6 @@
 			</File>
 			<File
 				RelativePath="..\..\graphics\scaler.h">
-			</File>
-			<File
-				RelativePath="..\..\graphics\smk_player.cpp">
-			</File>
-			<File
-				RelativePath="..\..\graphics\smk_player.h">
 			</File>
 			<File
 				RelativePath="..\..\graphics\surface.cpp">
@@ -1136,6 +1112,33 @@
 				</File>
 				<File
 					RelativePath="..\..\graphics\fonts\scummfont.cpp">
+				</File>
+			</Filter>
+			<Filter
+				Name="video">
+				<File
+					RelativePath="..\..\graphics\video\dxa_player.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\dxa_player.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\flic_player.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\flic_player.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\mpeg_player.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\mpeg_player.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\smk_player.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\smk_player.h">
 				</File>
 			</Filter>
 		</Filter>
