--- a/dists/msvc8/scummvm.vcproj
+++ b/dists/msvc8/scummvm.vcproj
@@ -1285,22 +1285,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\graphics\dxa_player.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\graphics\dxa_player.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\graphics\flic_player.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\graphics\flic_player.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\graphics\font.cpp"
 				>
 			</File>
@@ -1341,14 +1325,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\graphics\mpeg_player.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\graphics\mpeg_player.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\graphics\primitives.cpp"
 				>
 			</File>
@@ -1362,14 +1338,6 @@
 			</File>
 			<File
 				RelativePath="..\..\graphics\scaler.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\graphics\smk_player.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\graphics\smk_player.h"
 				>
 			</File>
 			<File
@@ -1525,6 +1493,42 @@
 				</File>
 				<File
 					RelativePath="..\..\graphics\fonts\scummfont.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="video"
+				>
+				<File
+					RelativePath="..\..\graphics\video\dxa_player.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\dxa_player.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\flic_player.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\flic_player.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\mpeg_player.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\mpeg_player.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\smk_player.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\smk_player.h"
 					>
 				</File>
 			</Filter>
