Updated the MSVC project files of the SAGA engine
svn-id: r35485

--- a/dists/msvc7/saga.vcproj
+++ b/dists/msvc7/saga.vcproj
@@ -224,10 +224,19 @@
 			RelativePath="..\..\engines\saga\render.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\rscfile.cpp">
+			RelativePath="..\..\engines\saga\resource.cpp">
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\rscfile.h">
+			RelativePath="..\..\engines\saga\resource.h">
+		</File>
+		<File
+			RelativePath="..\..\engines\saga\resource_hrs.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\saga\resource_res.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\saga\resource_rsc.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\saga\saga.cpp">
