drop mpeg2 support
svn-id: r35500

--- a/backends/platform/wii/Makefile
+++ b/backends/platform/wii/Makefile
@@ -35,7 +35,7 @@ USE_ZLIB = 1
 USE_MAD = 1
 USE_TREMOR = 1
 USE_FLAC = 1
-USE_MPEG2 = 1
+#USE_MPEG2 = 1
 ifeq ($(GAMECUBE),1)
 USE_MT32EMU = 0
 else
