enable groovie and tucker
svn-id: r35501

--- a/backends/platform/wii/Makefile
+++ b/backends/platform/wii/Makefile
@@ -14,6 +14,7 @@ ENABLE_CINE = STATIC_PLUGIN
 ENABLE_CRUISE = STATIC_PLUGIN
 ENABLE_DRASCULA = STATIC_PLUGIN
 ENABLE_GOB = STATIC_PLUGIN
+ENABLE_GROOVIE = STATIC_PLUGIN
 ENABLE_IGOR = STATIC_PLUGIN
 ENABLE_KYRA = STATIC_PLUGIN
 ENABLE_LURE = STATIC_PLUGIN
@@ -27,6 +28,7 @@ ENABLE_SWORD1 = STATIC_PLUGIN
 ENABLE_SWORD2 = STATIC_PLUGIN
 ENABLE_TINSEL = STATIC_PLUGIN
 ENABLE_TOUCHE = STATIC_PLUGIN
+ENABLE_TUCKER = STATIC_PLUGIN
 
 DISABLE_HQ_SCALERS = 1
 DISABLE_SCALERS = 1
