Updated the MSVC project files for commit #35526
svn-id: r35529

--- a/dists/msvc7/scummvm.vcproj
+++ b/dists/msvc7/scummvm.vcproj
@@ -941,6 +941,12 @@
 				RelativePath="..\..\graphics\cursorman.h">
 			</File>
 			<File
+				RelativePath="..\..\graphics\dither.cpp">
+			</File>
+			<File
+				RelativePath="..\..\graphics\dither.h">
+			</File>
+			<File
 				RelativePath="..\..\graphics\font.cpp">
 			</File>
 			<File
