--- a/dists/msvc9/scummvm.vcproj
+++ b/dists/msvc9/scummvm.vcproj
@@ -1290,6 +1290,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\graphics\dither.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\graphics\dither.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\graphics\font.cpp"
 				>
 			</File>
