--- a/dists/msvc71/scummvm.vcproj
+++ b/dists/msvc71/scummvm.vcproj
@@ -955,6 +955,12 @@
 				RelativePath="..\..\graphics\cursorman.h">
 			</File>
 			<File
+				RelativePath="..\..\graphics\dither.cpp">
+			</File>
+			<File
+				RelativePath="..\..\graphics\dither.h">
+			</File>
+			<File
 				RelativePath="..\..\graphics\font.cpp">
 			</File>
 			<File
