Updated the MSVC project files of the kyra engine
svn-id: r35556

--- a/dists/msvc9/kyra.vcproj
+++ b/dists/msvc9/kyra.vcproj
@@ -552,6 +552,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\util.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\util.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\vqa.cpp"
 			>
 		</File>
