--- a/dists/msvc7/kyra.vcproj
+++ b/dists/msvc7/kyra.vcproj
@@ -392,6 +392,12 @@
 			RelativePath="..\..\engines\kyra\timer_mr.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\util.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\util.h">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\vqa.cpp">
 		</File>
 		<File
