--- a/dists/msvc8/kyra.vcproj
+++ b/dists/msvc8/kyra.vcproj
@@ -551,6 +551,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\util.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\util.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\vqa.cpp"
 			>
 		</File>
