Preliminary Shorten audio support for SAGA 2 games. It's still very wrong and needs further work, but it's a start
svn-id: r35626

--- a/dists/msvc7/scummvm.vcproj
+++ b/dists/msvc7/scummvm.vcproj
@@ -444,6 +444,12 @@
 				RelativePath="..\..\sound\rate.h">
 			</File>
 			<File
+				RelativePath="..\..\sound\shorten.cpp">
+			</File>
+			<File
+				RelativePath="..\..\sound\shorten.h">
+			</File>
+			<File
 				RelativePath="..\..\sound\voc.cpp">
 			</File>
 			<File
