--- a/dists/msvc71/scummvm.vcproj
+++ b/dists/msvc71/scummvm.vcproj
@@ -458,6 +458,12 @@
 				RelativePath="..\..\sound\rate.h">
 			</File>
 			<File
+				RelativePath="..\..\sound\shorten.cpp">
+			</File>
+			<File
+				RelativePath="..\..\sound\shorten.h">
+			</File>
+			<File
 				RelativePath="..\..\sound\voc.cpp">
 			</File>
 			<File
