Updated the MSVC project files for commit #35668
svn-id: r35671

--- a/dists/msvc7/scummvm.vcproj
+++ b/dists/msvc7/scummvm.vcproj
@@ -819,6 +819,12 @@
 				RelativePath="..\..\gui\EditTextWidget.h">
 			</File>
 			<File
+				RelativePath="..\..\gui\GuiManager.cpp">
+			</File>
+			<File
+				RelativePath="..\..\gui\GuiManager.h">
+			</File>			
+			<File
 				RelativePath="..\..\gui\Key.cpp">
 			</File>
 			<File
@@ -847,12 +853,6 @@
 			</File>
 			<File
 				RelativePath="..\..\gui\message.h">
-			</File>
-			<File
-				RelativePath="..\..\gui\newgui.cpp">
-			</File>
-			<File
-				RelativePath="..\..\gui\newgui.h">
 			</File>
 			<File
 				RelativePath="..\..\gui\object.cpp">
