--- a/dists/msvc71/scummvm.vcproj
+++ b/dists/msvc71/scummvm.vcproj
@@ -833,6 +833,12 @@
 				RelativePath="..\..\gui\EditTextWidget.h">
 			</File>
 			<File
+				RelativePath="..\..\gui\GuiManager.cpp">
+			</File>
+			<File
+				RelativePath="..\..\gui\GuiManager.h">
+			</File>			
+			<File
 				RelativePath="..\..\gui\Key.cpp">
 			</File>
 			<File
@@ -861,12 +867,6 @@
 			</File>
 			<File
 				RelativePath="..\..\gui\message.h">
-			</File>
-			<File
-				RelativePath="..\..\gui\newgui.cpp">
-			</File>
-			<File
-				RelativePath="..\..\gui\newgui.h">
 			</File>
 			<File
 				RelativePath="..\..\gui\object.cpp">
