follow new SAGA engine defines
svn-id: r35729

--- a/backends/platform/wince/Makefile
+++ b/backends/platform/wince/Makefile
@@ -27,6 +27,8 @@ ENABLE_GOB = STATIC_PLUGIN
 ENABLE_LURE = STATIC_PLUGIN
 ENABLE_CINE = STATIC_PLUGIN
 ENABLE_SAGA = STATIC_PLUGIN
+ENABLE_IHNM = 1
+#ENABLE_SAGA2 = 1
 ENABLE_KYRA = STATIC_PLUGIN
 ENABLE_AGI = STATIC_PLUGIN
 ENABLE_AGOS = STATIC_PLUGIN
