Updated the MSVC project files for the latest changes to the video playing code
svn-id: r35773

--- a/dists/msvc7/scummvm.vcproj
+++ b/dists/msvc7/scummvm.vcproj
@@ -823,7 +823,7 @@
 			</File>
 			<File
 				RelativePath="..\..\gui\GuiManager.h">
-			</File>			
+			</File>
 			<File
 				RelativePath="..\..\gui\Key.cpp">
 			</File>
@@ -1131,6 +1131,12 @@
 				</File>
 				<File
 					RelativePath="..\..\graphics\video\smk_player.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\video_player.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\video_player.h">
 				</File>
 			</Filter>
 		</Filter>
