--- a/dists/msvc8/scummvm.vcproj
+++ b/dists/msvc8/scummvm.vcproj
@@ -1128,7 +1128,7 @@
 			<File
 				RelativePath="..\..\gui\GuiManager.h"
 				>
-			</File>			
+			</File>
 			<File
 				RelativePath="..\..\gui\Key.cpp"
 				>
@@ -1537,6 +1537,14 @@
 				</File>
 				<File
 					RelativePath="..\..\graphics\video\smk_player.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\video_player.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\video_player.h"
 					>
 				</File>
 			</Filter>
