--- a/dists/msvc71/scummvm.vcproj
+++ b/dists/msvc71/scummvm.vcproj
@@ -837,7 +837,7 @@
 			</File>
 			<File
 				RelativePath="..\..\gui\GuiManager.h">
-			</File>			
+			</File>
 			<File
 				RelativePath="..\..\gui\Key.cpp">
 			</File>
@@ -1145,6 +1145,12 @@
 				</File>
 				<File
 					RelativePath="..\..\graphics\video\smk_player.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\video_player.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\video\video_player.h">
 				</File>
 			</Filter>
 		</Filter>
