--- a/backends/platform/dc/Makefile
+++ b/backends/platform/dc/Makefile
@@ -48,6 +48,7 @@ ENABLE_CRUISE = $(ENABLED)
 ENABLE_DRASCULA = $(ENABLED)
 ENABLE_GOB = $(ENABLED)
 ENABLE_IGOR = $(ENABLED)
+ENABLE_IHNM = $(ENABLED)
 ENABLE_KYRA = $(ENABLED)
 ENABLE_LURE = $(ENABLED)
 ENABLE_M4 = $(ENABLED)
