--- a/backends/platform/wii/Makefile
+++ b/backends/platform/wii/Makefile
@@ -23,6 +23,8 @@ ENABLE_MADE = STATIC_PLUGIN
 ENABLE_PARALLACTION = STATIC_PLUGIN
 ENABLE_QUEEN = STATIC_PLUGIN
 ENABLE_SAGA = STATIC_PLUGIN
+ENABLE_IHNM = STATIC_PLUGIN
+ENABLE_SAGA2 = STATIC_PLUGIN
 ENABLE_SKY = STATIC_PLUGIN
 ENABLE_SWORD1 = STATIC_PLUGIN
 ENABLE_SWORD2 = STATIC_PLUGIN
