Updated the project files of the groovie engine for commit #35855
svn-id: r35860

--- a/dists/msvc7/groovie.vcproj
+++ b/dists/msvc7/groovie.vcproj
@@ -167,6 +167,12 @@
 			RelativePath="..\..\engines\groovie\roq.h">
 		</File>
 		<File
+			RelativePath="..\..\engines\groovie\saveload.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\groovie\saveload.h">
+		</File>		
+		<File
 			RelativePath="..\..\engines\groovie\script.cpp">
 		</File>
 		<File
