--- a/dists/msvc8/groovie.vcproj
+++ b/dists/msvc8/groovie.vcproj
@@ -253,6 +253,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\groovie\saveload.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\groovie\saveload.h"
+			>
+		</File>		
+		<File
 			RelativePath="..\..\engines\groovie\script.cpp"
 			>
 		</File>
