--- a/dists/msvc71/groovie.vcproj
+++ b/dists/msvc71/groovie.vcproj
@@ -181,6 +181,12 @@
 			RelativePath="..\..\engines\groovie\roq.h">
 		</File>
 		<File
+			RelativePath="..\..\engines\groovie\saveload.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\groovie\saveload.h">
+		</File>		
+		<File
 			RelativePath="..\..\engines\groovie\script.cpp">
 		</File>
 		<File
