Updated the MSVC files of the Kyra engine
svn-id: r35909

--- a/dists/msvc7/kyra.vcproj
+++ b/dists/msvc7/kyra.vcproj
@@ -146,6 +146,9 @@
 			RelativePath="..\..\engines\kyra\gui_lok.h">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\gui_lol.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\gui_mr.cpp">
 		</File>
 		<File
@@ -162,6 +165,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\items_lok.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\items_lol.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\items_mr.cpp">
@@ -236,6 +242,9 @@
 			RelativePath="..\..\engines\kyra\scene_lok.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\scene_lol.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\scene_mr.cpp">
 		</File>
 		<File
@@ -291,6 +300,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\script_lok.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\script_lol.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\script_mr.cpp">
