--- a/dists/msvc71/kyra.vcproj
+++ b/dists/msvc71/kyra.vcproj
@@ -160,6 +160,9 @@
 			RelativePath="..\..\engines\kyra\gui_lok.h">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\gui_lol.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\gui_mr.cpp">
 		</File>
 		<File
@@ -176,6 +179,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\items_lok.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\items_lol.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\items_mr.cpp">
@@ -250,6 +256,9 @@
 			RelativePath="..\..\engines\kyra\scene_lok.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\scene_lol.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\scene_mr.cpp">
 		</File>
 		<File
@@ -305,6 +314,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\script_lok.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\script_lol.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\script_mr.cpp">
