--- a/dists/msvc8/kyra.vcproj
+++ b/dists/msvc8/kyra.vcproj
@@ -223,6 +223,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\gui_lol.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\gui_mr.cpp"
 			>
 		</File>
@@ -244,6 +248,10 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\items_lok.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\items_lol.cpp"
 			>
 		</File>
 		<File
@@ -343,6 +351,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\scene_lol.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\scene_mr.cpp"
 			>
 		</File>
@@ -416,6 +428,10 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\script_lok.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\script_lol.cpp"
 			>
 		</File>
 		<File
