Added ISO9660/Joliet DVD support
svn-id: r35930

--- a/backends/platform/wii/Makefile
+++ b/backends/platform/wii/Makefile
@@ -100,7 +100,7 @@ TARGET  = scummvm-wii
 MACHDEP  = -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float \
 			-ffunction-sections -fdata-sections -fmodulo-sched
 LIBDIR   = $(DEVKITPRO)/libogc/lib/wii
-LIBS      = -lstdc++ -lfat -lwiiuse -lbte -logc -lm
+LIBS      = -lstdc++ -ldi -lfat -lwiiuse -lbte -logc -lm
 endif
 
 INCDIR   = $(srcdir) . $(srcdir)/engines/ $(DEVKITPRO)/libogc/include
