added ENABLE_VKEYBD, ENABLE_KEYMAPPER (both not mapped yet) and ENABLE_AGI
svn-id: r35984

--- a/backends/platform/wii/Makefile
+++ b/backends/platform/wii/Makefile
@@ -18,7 +18,7 @@ GAMECUBE = 0
 ENABLE_SCUMM = STATIC_PLUGIN
 ENABLE_SCUMM_7_8 = STATIC_PLUGIN
 ENABLE_HE = STATIC_PLUGIN
-# ENABLE_AGI = STATIC_PLUGIN
+ENABLE_AGI = STATIC_PLUGIN
 ENABLE_AGOS = STATIC_PLUGIN
 ENABLE_CINE = STATIC_PLUGIN
 ENABLE_CRUISE = STATIC_PLUGIN
@@ -114,6 +114,8 @@ LDFLAGS  += $(addprefix -L,$(LIBDIR))
 
 CXXFLAGS += -I$(DEVKITPRO)/3rd/wii/include
 LDFLAGS  += -L$(DEVKITPRO)/3rd/wii/lib
+
+CXXFLAGS += -DENABLE_VKEYBD -DENABLE_KEYMAPPER
 
 ifeq ($(DEBUG_WII_USBGECKO),1)
 CXXFLAGS += -DDEBUG_WII_USBGECKO
