made ISO9660 support optional via USE_WII_DI
svn-id: r35985

--- a/backends/platform/wii/Makefile
+++ b/backends/platform/wii/Makefile
@@ -14,6 +14,14 @@ DEBUG_WII_GDB = 0
 # Builds a Gamecube version. Cleanup object files before flipping this!
 GAMECUBE = 0
 
+# Enable DVD ISO9660/Joliet support using libdi (included in libogc)
+# This requires a working DVDX install to function, not available on Gamecube
+ifeq ($(GAMECUBE),1)
+USE_WII_DI = 0
+else
+USE_WII_DI = 1
+endif
+
 # List of game engines to compile in. Comment a to disable the engine.
 ENABLE_SCUMM = STATIC_PLUGIN
 ENABLE_SCUMM_7_8 = STATIC_PLUGIN
@@ -128,6 +136,10 @@ endif
 ifeq ($(DEBUG_WII_GDB),1)
 CXXFLAGS += -DDEBUG_WII_GDB
 LIBS     += -ldb
+endif
+
+ifeq ($(USE_WII_DI),1)
+CXXFLAGS += -DUSE_WII_DI
 endif
 
 ifeq ($(USE_ZLIB),1)
