sync default engines with configure
svn-id: r35989

--- a/backends/platform/wii/Makefile
+++ b/backends/platform/wii/Makefile
@@ -21,24 +21,24 @@ ENABLE_HE = STATIC_PLUGIN
 # ENABLE_AGI = STATIC_PLUGIN
 ENABLE_AGOS = STATIC_PLUGIN
 ENABLE_CINE = STATIC_PLUGIN
-ENABLE_CRUISE = STATIC_PLUGIN
+#ENABLE_CRUISE = STATIC_PLUGIN
 ENABLE_DRASCULA = STATIC_PLUGIN
 ENABLE_GOB = STATIC_PLUGIN
 ENABLE_GROOVIE = STATIC_PLUGIN
-ENABLE_IGOR = STATIC_PLUGIN
+#ENABLE_IGOR = STATIC_PLUGIN
 ENABLE_KYRA = STATIC_PLUGIN
 ENABLE_LURE = STATIC_PLUGIN
-ENABLE_M4 = STATIC_PLUGIN
-ENABLE_MADE = STATIC_PLUGIN
+#ENABLE_M4 = STATIC_PLUGIN
+#ENABLE_MADE = STATIC_PLUGIN
 ENABLE_PARALLACTION = STATIC_PLUGIN
 ENABLE_QUEEN = STATIC_PLUGIN
 ENABLE_SAGA = STATIC_PLUGIN
 ENABLE_IHNM = STATIC_PLUGIN
-ENABLE_SAGA2 = STATIC_PLUGIN
+#ENABLE_SAGA2 = STATIC_PLUGIN
 ENABLE_SKY = STATIC_PLUGIN
 ENABLE_SWORD1 = STATIC_PLUGIN
 ENABLE_SWORD2 = STATIC_PLUGIN
-ENABLE_TINSEL = STATIC_PLUGIN
+#ENABLE_TINSEL = STATIC_PLUGIN
 ENABLE_TOUCHE = STATIC_PLUGIN
 ENABLE_TUCKER = STATIC_PLUGIN
 
