Updated the MSVC projects with the new cruise/staticres file
svn-id: r36052

--- a/dists/msvc8/cruise.vcproj
+++ b/dists/msvc8/cruise.vcproj
@@ -359,6 +359,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\cruise\staticres.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\cruise\staticres.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\cruise\various.cpp"
 			>
 		</File>
