Reorder modules to fix linker issues when all engines are disabled (this order is weird, but for now seems to work)
svn-id: r36136

--- a/Makefile.common
+++ b/Makefile.common
@@ -25,9 +25,9 @@ MODULES += \
 	gui \
 	graphics \
 	sound \
-	engines \
+	backends \
 	common \
-	backends
+	engines \
 
 ifdef USE_MT32EMU
 MODULES += sound/softsynth/mt32
