Updated the kyra MSVC project files for the newly added files
svn-id: r36189

--- a/dists/msvc7/kyra.vcproj
+++ b/dists/msvc7/kyra.vcproj
@@ -149,6 +149,9 @@
 			RelativePath="..\..\engines\kyra\gui_lol.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\gui_lol.h">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\gui_mr.cpp">
 		</File>
 		<File
@@ -332,6 +335,9 @@
 			RelativePath="..\..\engines\kyra\sequences_lok.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\sequences_lol.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\sequences_mr.cpp">
 		</File>
 		<File
@@ -381,6 +387,12 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\text_lok.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\text_lol.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\text_lol.h">
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\text_mr.cpp">
