--- a/dists/msvc8/kyra.vcproj
+++ b/dists/msvc8/kyra.vcproj
@@ -227,6 +227,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\gui_lol.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\gui_mr.cpp"
 			>
 		</File>
@@ -471,6 +475,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\sequences_lol.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\sequences_mr.cpp"
 			>
 		</File>
@@ -536,6 +544,14 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\text_lok.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\text_lol.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\text_lol.h"
 			>
 		</File>
 		<File
