--- a/dists/msvc71/kyra.vcproj
+++ b/dists/msvc71/kyra.vcproj
@@ -163,6 +163,9 @@
 			RelativePath="..\..\engines\kyra\gui_lol.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\gui_lol.h">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\gui_mr.cpp">
 		</File>
 		<File
@@ -346,6 +349,9 @@
 			RelativePath="..\..\engines\kyra\sequences_lok.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\sequences_lol.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\sequences_mr.cpp">
 		</File>
 		<File
@@ -395,6 +401,12 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\text_lok.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\text_lol.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\kyra\text_lol.h">
 		</File>
 		<File
 			RelativePath="..\..\engines\kyra\text_mr.cpp">
